--- a/2012/3papers/combined/combined_epl.tex
+++ b/2012/3papers/combined/combined_epl.tex
@@ -1,14 +1,13 @@
 \documentclass[doublecol]{epl/epl2} 
 
-\title{Luminosity independent measurements of total, elastic and inelastic cross-sections at $\sqrt s$ = 7\,TeV}
+\title{Luminosity independent measurements of total, elastic and inelastic cross-sections at $\sqrt{s}$ = 7\,TeV}
 %\shorttitle{Title} %Insert here a short version of the title if it exceeds 70 characters
 
 \author{
 The TOTEM Collaboration\\
-G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, Bulgarian Academy of Sciences, Sofia, Bulgaria.}\addtocounter{footnote}{-1}
-%\addtocounter{footnote}
+G.~Antchev\thanksInst{1}
 \and P.~Aspell\inst{8}
-\and I.~Atanassov\inst{8}\hspace{-0.15cm}\footnotemark
+\and I.~Atanassov\inst{8}\thanksInst{1}
 \and V.~Avati\inst{8}
 \and J.~Baechler\inst{8}
 \and V.~Berardi\inst{5b,5a}
@@ -22,18 +21,18 @@ G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, 
 \and M.~Calicchio\inst{5b,5a}
 \and M.~G.~Catanesi\inst{5a}
 \and C.~Covault\inst{9}
-\and M.~Csan\'{a}d\inst{4}
+\and M.~Csan\'{a}d\inst{4}\thanksInst{5}
 \and T.~Cs\"{o}rg\H{o}\inst{4}
 \and M.~Deile\inst{8}
 \and K.~Eggert\inst{9}
-\and V.~Eremin\thanks{Ioffe Physical - Technical Institute of Russian Academy of Sciences.}
+\and V.~Eremin\thanksInst{2}
 \and R.~Ferretti\inst{6a,6b}
 \and F.~Ferro\inst{6a}
-\and A. Fiergolski\thanks{Warsaw University of Technology, Poland.}
+\and A. Fiergolski\thanksInst{3}
 \and F.~Garcia\inst{3a}
 \and S.~Giani\inst{8}
 \and V.~Greco\inst{7b,8}
-\and L.~Grzanka\inst{8}\hspace{-0.15cm}\thanks{Institute of Nuclear Physics, Polish Academy of Science, Cracow, Poland.}\addtocounter{footnote}{-2}
+\and L.~Grzanka\inst{8}\thanksInst{4}
 \and J.~Heino\inst{3a}
 \and T.~Hilden\inst{3a,3b}
 \and R.~A.~Intonti\inst{5a}
@@ -44,8 +43,7 @@ G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, 
 \and S.~Lami\inst{7a}
 \and G.~Latino\inst{7b}
 \and R.~Lauhakangas\inst{3a}
-\and  T.~Leszko\footnotemark
-%\thanks{Warsaw University of Technology, Poland}
+\and T.~Leszko\thanksInst{3}
 \and E.~Lippmaa\inst{2}
 \and M.~Lokaj\'{\i}\v{c}ek\inst{1a}
 \and M.~Lo~Vetere\inst{6b,6a}
@@ -54,13 +52,13 @@ G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, 
 \and T.~M\"aki\inst{3a}
 \and A.~Mercadante\inst{5b,5a}
 \and N.~Minafra\inst{8} 
-\and S.~Minutoli\inst{6a}\addtocounter{footnote}{1}
-\and F.~Nemes\inst{4}\hspace{-0.15cm}\thanks{Department of Atomic Physics, ELTE University, Hungary.}
+\and S.~Minutoli\inst{6a}
+\and F.~Nemes\inst{4}\thanksInst{5}
 \and H.~Niewiadomski\inst{8}
 \and E.~Oliveri\inst{7b}
 \and F.~Oljemark\inst{3a,3b}
 \and R.~Orava\inst{3a,3b}
-\and M.~Oriunno\inst{8}\hspace{-0.15cm}\thanks{SLAC National Accelerator Laboratory, Stanford CA, USA.}
+\and M.~Oriunno\inst{8}\thanksInst{6}
 \and K.~\"{O}sterberg\inst{3a,3b}
 \and P.~Palazzi\inst{7b}
 \and J.~Proch\'{a}zka\inst{1a}
@@ -103,26 +101,28 @@ G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, 
 \inst{8} {CERN, Geneva, Switzerland.}\\
 \inst{9} {Case Western Reserve University, Dept. of Physics, Cleveland, OH, USA.}\\
 \inst{10}{Penn State University, Dept.~of Physics, University Park, PA, USA.}\\
+%
+\thanksRef{1}{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, Bulgarian Academy of Sciences, Sofia, Bulgaria.}
+\thanksRef{2}{Ioffe Physical -- Technical Institute of Russian Academy of Sciences.}
+\thanksRef{3}{Warsaw University of Technology, Poland.}
+\thanksRef{4}{Institute of Nuclear Physics, Polish Academy of Science, Cracow, Poland.}
+\thanksRef{5}{Department of Atomic Physics, E\"otv\"os University, Hungary.}
+\thanksRef{6}{SLAC National Accelerator Laboratory, Stanford CA, USA.}
 }
 
 \pacs{13.60.Hb}{Total and inclusive cross sections (including deep-inelastic processes)}
 
 
 \abstract{%
-!! THIS IS JUST A PLACEHOLDER !!\\
-TOTEM has measured the differential cross-section for elastic proton-proton scattering
-at the LHC energy of √
-s = 7 TeV analysing data from a short run with dedicated large-β∗ optics.
-A single exponential fit with a slope B = (20.1 0.2stat 0.3syst ) GeV−2 describes the range of the
-± ±four-momentum transfer squared from 0.02 to 0.33 GeV2. After the extrapolation to = 0,
-|t| |t|a total elastic scattering cross-section of (24.8 0.2stat 1.2syst) mb was obtained. Applying
-± ±the optical theorem and using the luminosity measurement from CMS, a total proton-proton
-cross-section of (98.3 0.2stat 2.8syst) mb was deduced which is in good agreement with the
-± ±expectation from the overall fit of previously measured data over a large range of center-of-mass
-energies. From the total and elastic pp cross-section measurements, an inelastic pp cross-section
-of (73.5 0.6stat +1.8
- syst) mb was inferred.
-± −1.3
+This is just a placeholder. This is just a placeholder. This is just a placeholder. This is just a placeholder.
+This is just a placeholder. This is just a placeholder. This is just a placeholder. This is just a placeholder.
+This is just a placeholder. This is just a placeholder. This is just a placeholder. This is just a placeholder.
+This is just a placeholder. This is just a placeholder. This is just a placeholder. This is just a placeholder.
+This is just a placeholder. This is just a placeholder. This is just a placeholder. This is just a placeholder.
+This is just a placeholder. This is just a placeholder. This is just a placeholder. This is just a placeholder.
+This is just a placeholder. This is just a placeholder. This is just a placeholder. This is just a placeholder.
+This is just a placeholder. This is just a placeholder. This is just a placeholder. This is just a placeholder.
+This is just a placeholder. This is just a placeholder. This is just a placeholder. This is just a placeholder.
 }
 
 
@@ -137,127 +137,23 @@ of (73.5 0.6stat +1.8
 \def\S{\hbox to\wd123{\hss}}
 \def\.{\hbox to\wd124{\hss}}
 
+\def\thanksInst#1{\unskip\footnotemark[#1]}
+
+\bgroup
+\catcode`\@=11
+
+\gdef\thanksRef#1#2{%
+    \protected@xdef\@thanks{\@thanks\protect\footnotetext[#1]{#2}}%
+}
+\egroup
 
 \begin{document}
 
 \maketitle
 
 %--------------------------------------------------
-\section{Introduction}
 
-
-In the previous TOTEM papers \cite{epl96,P1} the differential cross-section for elastic proton-proton scattering was presented as a function of the four-momentum transfer squared $t$. By extrapolation to $t=0$, the cross-section $\d\sigma_{\rm el}/\d t|_{0}$ at the optical point was determined. Integrating the differential distribution yields the integrated elastic cross-section $\sigma_{\rm el}$. Applying the optical theorem, the total and the inelastic proton-proton cross-sections were derived with a slight dependence on the $\rho$ parameter (the ratio of the real to the imaginary part of the forward hadronic scattering amplitude):
-\begin{equation}
-\label{eq:m el}
-	\sigma_{\rm tot}^2 = {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, \left. \d\sigma_{\rm el}\over\d t\right|_0\ ,\qquad
-	\sigma_{\rm inel} = \sigma_{\rm tot} - \sigma_{\rm el}\ .
-\end{equation}
-The results for the low-luminosity measurement \cite{epl96} and the higher-luminosity measurement \cite{P1} are summarized in Tab.~\ref{tab:cs}. These cross-sections are exclusively based on the measurement of the elastic scattering cross-section.
-
-However, taking advantage of the two triggerable forward charged-particle detectors, the inelastic cross-section was also directly measured by the inelastic rate \cite{P2} using the same data set as in \cite{P1}. A small Monte-Carlo correction ($\approx 3\%$) had to be applied to account for the non-visible events in the very forward cone $|\eta| > 6.5$ mainly due to single diffraction.
-
-The excellent agreement between the two completely different measurements of the inelastic cross-sections confirms the understanding of the systematic uncertainties and corrections applied in both methods. Taking maximum advantage of the two measurements by combining them in different ways allows extracting more information from the data, such as:
-\begin{itemize}
-\item luminosity independent cross-sections
-\item luminosity determination
-\item independent cross-sections
-\item $\rho$ constraints
-\item luminosity independent cross-section ratios
-\end{itemize}
-
-This article is based on the data collected in October 2011 (for details see Tab.~1 in \cite{P1}).
-%That run was split into three datasets with Roman Pot detectors at different positions (for details see Tab.~1 in \cite{P1}). All calculations were done independently for these three datasets, showing an excellent match. Therefore only the results for the three datasets combined will be given below.
-For completeness, some of the results will be compared to those of the low-luminosity run from June 2011 \cite{epl96}, where only the elastic part of the analysis could be performed.
-
-
-%--------------------------------------------------
-\section{Luminosity independent cross-sections}
-
-Using the optical theorem, one can combine the elastic measurements from \cite{P1} and the inelastic measurements from \cite{P2} to derive the total cross-section that is independent from the luminosity:
-\begin{equation}
-\label{eq:m lumi indep}
-	\sigma_{\rm tot} = {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, {\d N_{\rm el}/\d t|_0 \over N_{\rm el} + N_{\rm inel} }\ .
-\end{equation}
-Taking the COMPETE \cite{compete} preferred-model extrapolation $\rho = 0.141\pm 0.007$ yields $\sigma_{\rm tot} = (98.0 \pm 2.5)\un{mb}$.
-
-One can use the luminosity-independent ratio $\sigma_{\rm el} / \sigma_{\rm inel}$ from the previous section to calculate the luminosity-independent $\sigma_{\rm inel} = (72.9 \pm 1.5)\un{mb}$ and $\sigma_{\rm el} = (25.1 \pm 1.1)\un{mb}$. All these cross-section values and their uncertainty compositions are summarized in Tab.~\ref{tab:cs}.
-
-
-
-%--------------------------------------------------
-\section{Luminosity determination}
-
-\subsection{October}
-
-The optical theorem can be used in a complementary way in order to determine the luminosity integrated over the data-taking period:
-\begin{equation}
-\label{eq:lumi oct}
-{\cal L_{\rm int}} = {1 + \rho^2 \over 16\pi\, (\hbar c)^2}\, { (N_{\rm el} + N_{\rm inel})^2 \over \d N_{\rm el}/\d t|_0 }\ ,
-\end{equation}
-where the elastic inputs are taken from \cite{P1} and the inelastic from \cite{P2}. Using the same COMPETE value as above yields ${\cal L_{\rm int}} = (83.7 \pm 3.2) \un{\mu b^{-1}}$, which is to be compared with the CMS measurement ${\cal L_{\rm int}} = (82.8 \pm 3.3) \un{\mu b^{-1}}$. TODO: comments on the comparison, HF considerations
-
-\subsection{June}
-
-Using the total and elastic cross-sections determined from the October run, we can calculate the integrated luminosity ${\cal L}_{\rm int}^{\rm June}$ for the June run analyzed in \cite{epl96}. This can be achieved in two ways -- using the total cross-section
-\begin{equation}
-\label{eq:lumi jun tot}
-{\cal L}_{\rm int}^{\rm June} =  {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, \left. \d N_{\rm el}^{\rm June}\over\d t\right|_0\, {1\over \sigma_{\rm tot}^2}
-\end{equation}
-or the elastic cross-section
-\begin{equation}
-\label{eq:lumi jun el}
-{\cal L}_{\rm int}^{\rm June} = {N_{\rm el}^{\rm June}\over \sigma_{\rm el}}\ .
-\end{equation}
-Taking the luminosity-independent values (below Eq.~\ref{eq:m lumi indep}) for the total $\sigma_{\rm tot}$ and elastic $\sigma_{\rm el}$ cross-sections and the June elastic measurements from \cite{epl96} yields
-${\cal L}_{\rm int}^{\rm June} = (1.66 \pm 0.08)\un{\mu b^{-1}}$ via Eq.~(\ref{eq:lumi jun tot}) and
-${\cal L}_{\rm int}^{\rm June} = (1.65 \pm 0.07)\un{\mu b^{-1}}$ via Eq.~(\ref{eq:lumi jun el}). These are to be compared with the CMS measurement
-${\cal L}_{\rm int}^{\rm June} = (1.65 \pm 0.07)\un{\mu b^{-1}}$. TODO: comments on the comparison
-
-TODO: trend of CMS/TOTEM lumi ratio from June to October
-
-
-%--------------------------------------------------
-\section{$\rho$-independent quantities}
-
-Summing the elastic cross-section from \cite{P1} and the inelastic cross-section from \cite{P2} yields total cross-section
-\begin{equation}
-\label{eq:m rho indep}
-\sigma_{\rm tot} = \sigma_{\rm el} + \sigma_{\rm inel}
-\end{equation}
-which is manifestly $\rho$-independent. It evaluates to $\sigma_{\rm tot} = (99.1 \pm 4.3)\un{mb}$ (for details on the uncertainty composition see Tab.~\ref{tab:cs}). Apart from that, one can determine cross-section ratios which are moreover independent from the luminosity uncertainty: $\sigma_{\rm el} / \sigma_{\rm inel} = 0.345 \pm 0.009$ and $\sigma_{\rm el} / \sigma_{\rm tot} = 0.257 \pm 0.005$. TODO: link to the conclusion/interpretation
-
-
-
-%--------------------------------------------------
-\section{Rho determination}
-
-The elastic (from \cite{P1}) and inelastic (from \cite{P2}) measurements can be combined in order to determine $\rho^2$:
-\begin{equation}
-\label{eq:rho}
-\rho^2 = 16\pi\ (\hbar c)^2\ {\cal L_{\rm int}}\ {\d N_{\rm el}/\d t|_0\over (N_{\rm el} + N_{\rm inel})^2} - 1
-\end{equation}
-yielding $\rho^2 = 0.009 \pm 0.056$ (mean and standard deviation). This estimate can not be translated into terms of $\rho$ in a straight-forward manner since an important part of the $\rho^2$ distribution extends to negative values, where square root is not defined. Instead, we calculated that at $95\%$ confidence level $\rho^2 < 0.10$. This upper bound can be equally expressed as $\rho < 0.32$. Alternatively, one can pursue the Bayes' approach to estimate $|\rho|$. Taking a uniform prior $|\rho|$ distribution yields a posterior distribution with mean $0.145$ and standard deviation $0.091$.
-
-
-%--------------------------------------------------
-\section{Result summary}
-
-As shown above, the cross-sections can be obtained directly from the elastic scattering measurement, but also in combination with the inelastic rate eliminating  the dependence on either the luminosity or $\rho$. The total, elastic and inelastic cross-sections together with their individual uncertainties are summarized in Tab.~\ref{tab:cs} and also shown for comparison in Fig.~\ref{fig:cs}. All results are in excellent agreement with each other. In particular, the inelastic cross-section arising from two completely independent measurements with the Roman Pot detectors in the very forward region close to the beams and with the charged-particle telescopes more central agree remarkably well, giving confidence in the trigger, acceptance and analysis.
-
-The energy dependence of the proton-proton cross-sections is shown in Fig.~\ref{fig:cs}. The best fit of $\sigma_{\rm tot}(s)$ by the COMPETE Collaboration \cite{compete} (before the TOTEM result) describes the energy dependence well even up to the highest energies. The energy dependence of the elastic cross-section is fitted by TOTEM.
-
-\begin{figure*}
-\begin{center}
-\includegraphics{fig/sigma_tot_el_inel_cmp_big.pdf}
-%\vskip-5mm
-\caption{Left: the dependences of total (red), inelastic (blue) and elastic (green) cross-sections on the scattering energy $\sqrt s$. The continuous black lines (lower for $\rm pp$, upper for $\rm \bar pp$) represent the best fits of the total cross-section data by the COMPETE collaboration \cite{compete}. The dashed line results from a fit of the elastic scattering data. The dash-dotted curves correspond to the inelastic cross-section and were obtained as the difference between the continuos and dashed fits.\hfil\break
-Right: measurements of total (red), inelastic (blue) and elastic (green) cross-sections at $\sqrt s = 7\un{TeV}$. The circles represent the four TOTEM measurements summarized in Tab.~\ref{tab:cs} (weighted mean given by the dotted line), the other points show the measurements of other LHC collaborations.}
-\label{fig:cs}
-\end{center}
-\end{figure*}
-
-
-
+\def\TabCS{%
 \begin{largetable}
 \caption{Cross-section summary. The statistical uncertainties are negligible and therefore omitted. The systematic uncertainty contributions are grouped into several categories -- \emph{el} (from the elastic-scattering analysis), \emph{inel} (from the inelastic-scattering analysis), \emph{lumi} (from the $4\%$ uncertainty of the CMS luminosity measurement) and \emph{rho} (from the COMPETE preferred-model $\rho$ extrapolation uncertainty of $\pm 0.007$)
 -- together forming the \emph{full} systematic uncertainty (components combined in quadrature, including their correlations).
@@ -269,7 +165,7 @@ Right: measurements of total (red), inelastic (blue) and elastic (green) cross-s
 \begin{tabular}{cc@{\hskip\ColSep}rl @{\hskip\ColSep}cccc@{$\Rightarrow$}c @{\hskip\ColSep}cccc@{$\Rightarrow$}c @{\hskip\ColSep}cccc@{$\Rightarrow$}c}
 %&\multispan{17}\hrulefill\cr
 \hline
-&&\multispan2\hss elastic only (Eq.~(\ref{eq:m el})) \hss &\multispan5\hss elastic only (Eq.~(\ref{eq:m el}))\hss &\multispan5\hss ${\cal L}_{\rm int}$-independent (Eq.~(\ref{eq:m lumi indep}))\hss &\multispan5\hss $\rho$-independent (Eq.~(\ref{eq:m rho indep}))\hss\cr
+&&\multispan2\hss elastic only: Eq.~(\ref{eq:m el}) \hss &\multispan5\hss elastic only: Eq.~(\ref{eq:m el})\hss &\multispan5\hss ${\cal L}_{\rm int}$-independent: Eq.~(\ref{eq:m lumi indep})\hss &\multispan5\hss $\rho$-independent: Eq.~(\ref{eq:m rho indep})\hss\cr
 &&\multispan2\hss June 2011, Ref.~\cite{epl96} \hss &\multispan5\hss October 2011, Ref.~\cite{P1}\hss &\multispan5\hss October 2011\hss &\multispan5\hss October 2011\hss\cr\hline
                     &           &              & full        &          &    el     & lumi      & rho       & full        &          &    el     & inel      & rho       & full        &          &    el     & inel      & lumi      & full      \cr\hline
 $\sigma_{\rm tot}$  & $\rm[mb]$ & $\qquad98.3$ & $\pm 2.8$   &   $98.6$ & $\pm 1.0$ & $\pm 2.0$ & $\pm 0.1$ & $\pm 2.2$   &   $98.0$ & $\pm 1.8$ & $\pm 1.7$ & $\pm 0.2$ & $\pm 2.5$   &   $99.1$ & $\pm 0.3$ & $\pm 1.7$ & $\pm 4.0$ & $\pm 4.3$ \cr
@@ -277,42 +173,163 @@ $\sigma_{\rm inel}$ & $\rm[mb]$ & $\qquad73.5$ & $\pm 1.6$   &   $73.2$ & $\pm 0
 $\sigma_{\rm el}$   & $\rm[mb]$ & $\qquad24.8$ & $\pm 1.2$   &   $25.4$ & $\pm 0.3$ & $\pm 1.0$ &           & $\pm 1.1$   &   $25.1$ & $\pm 0.6$ & $\pm 0.9$ & $\pm 0.0$ & $\pm 1.1$   &   $25.4$ & $\pm 0.3$ &           & $\pm 1.0$ & $\pm 1.1$ \cr\hline
 \end{tabular}
 \end{largetable}
+}
 
+\def\TabLumi{%
+\begin{table}
+\caption{The integrated luminosities for the October and June data sets as determined by different experiments and different methods.}
+\label{tab:lumi}
+\begin{center}
+\begin{tabular}{clr}\hline
+data set & method & ${\cal L}_{\rm int}\ \unt{\mu b^{-1}}$\cr\hline
+		& TOTEM, Eq.~(\ref{eq:lumi oct})		& $83.7\S \pm 3.2\S$\cr
+\omit\hfil\vbox to0pt{\vss\hbox{October}\vss}\hfil&\multispan2\cr
+		& CMS 									& $82.8\S \pm 3.3\S$\cr\hline
+		& TOTEM, Eq.~(\ref{eq:lumi jun tot}) 	& $\S1.66 \pm 0.08$\cr
+June	& TOTEM, Eq.~(\ref{eq:lumi jun el}) 	& $\S1.65 \pm 0.07$\cr
+		& CMS									& $\S1.65 \pm 0.07$\cr\hline
+\end{tabular}
+\end{center}
+\end{table}
+}
+
+%--------------------------------------------------
+\section{Introduction}
+
+In the previous TOTEM publications \cite{epl96,P1} the differential cross-section for elastic proton-proton scattering was presented as a function of the four-momentum transfer squared $t$. By extrapolation to $t=0$, the cross-section $\d\sigma_{\rm el}/\d t|_{0}$ at the optical point was determined. Integrating the differential distribution yields the elastic cross-section $\sigma_{\rm el}$. Applying the optical theorem, the total and the inelastic proton-proton cross-sections were derived with a weak dependence on the $\rho$ parameter (the ratio of the real to the imaginary part of the forward hadronic scattering amplitude):
+\begin{equation}
+\label{eq:m el}
+	\sigma_{\rm tot}^2 = {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, \left. \d\sigma_{\rm el}\over\d t\right|_0\ ,\qquad
+	\sigma_{\rm inel} = \sigma_{\rm tot} - \sigma_{\rm el}\ .
+\end{equation}
+%The results for the low-luminosity measurement \cite{epl96} and the higher-luminosity measurement \cite{P1} are summarized in Tab.~\ref{tab:cs}.
+These cross-sections are exclusively based on the measurement of the elastic scattering cross-section.
+
+Moreover, taking advantage of the two triggerable forward charged-particle detectors, the inelastic cross-section was also directly measured \cite{P2} using the same data set as in \cite{P1}. A small Monte-Carlo correction ($\approx 3\%$) had to be applied to account for the non-visible events in the very forward cone $|\eta| > 6.5$, mainly due to single diffraction. The cross-sections with their systematic uncertainties are summarized in Tab.~\ref{tab:cs}.
+
+The excellent agreement between the two completely different measurements of the inelastic cross-sections confirms the understanding of the systematic uncertainties and corrections applied in both methods. Taking maximum advantage of the two measurements by combining them in different ways allows extracting more information from the data, such as:
+\begin{itemize}
+\setlength{\topskip}{0pt}%
+\setlength{\itemsep}{0pt}%
+\item luminosity independent cross-sections,
+\item luminosity determination,
+\item $\rho$-independent cross-sections,
+\item luminosity- and $\rho$-independent cross-section ratios,
+\item $\rho$ constraints.
+\end{itemize}
+
+This article is based on the data collected in October 2011 (for details see Tab.~1 in \cite{P1}).
+%That run was split into three datasets with Roman Pot detectors at different positions (for details see Tab.~1 in \cite{P1}). All calculations were done independently for these three datasets, showing an excellent match. Therefore only the results for the three datasets combined will be given below.
+For completeness, some of the results will be compared to those of the lower-luminosity run from June 2011 \cite{epl96}, where only the elastic part of the analysis could be performed.
+
+
+%--------------------------------------------------
+\section{Luminosity independent cross-sections}
+
+Using the optical theorem, one can combine the elastic measurements from \cite{P1} and the inelastic measurements from \cite{P2} to derive the total cross-section that is independent from the luminosity:
+\begin{equation}
+\label{eq:m lumi indep}
+	\sigma_{\rm tot} = {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, {\d N_{\rm el}/\d t|_0 \over N_{\rm el} + N_{\rm inel} }\ ,
+\end{equation}
+where the symbols $N$ stand for rates integrated over the run period. Taking $\rho = 0.141\pm 0.007$ from the COMPETE \cite{compete} preferred-model extrapolation yields the luminosity independent total cross-section, see Tab.~\ref{tab:cs}. Furthermore, using the measured ratio $N_{\rm el} / N_{\rm inel}$, the elastic and inelastic cross-sections can be derived as well independent from the luminosity. These cross-sections are also given in Tab.~\ref{tab:cs} with their uncertainty compositions.
+
+\TabCS
+
+%--------------------------------------------------
+\section{Luminosity determination}
+
+The optical theorem can also be applied in a complementary way such that the luminosity is be determined:
+\begin{equation}
+\label{eq:lumi oct}
+{\cal L_{\rm int}} = {1 + \rho^2 \over 16\pi\, (\hbar c)^2}\, { (N_{\rm el} + N_{\rm inel})^2 \over \d N_{\rm el}/\d t|_0 }\ .
+\end{equation}
+Thus, integrating the rates over the data-taking period during which the elastic \cite{P1} and inelastic \cite{P2} interactions have independently but simultaneously been measured, results in the integrated luminosity ${\cal L}_{\rm int}$. Using the above $\rho$ value, the luminosity determined by TOTEM for the October run is compared in Tab.~\ref{tab:lumi} to the one obtained by CMS in a completely different way. The excellent agreement between both measurements demonstrates the reliability of these luminosity determinations.
+
+
+Once the cross-section of a process is known, it can be, in general, used for luminosity determination. In particular, knowing the total and elastic cross-sections, the integrated luminosity of the earlier June run \cite{epl96} has been calculated from the elastic scattering rates $\d N_{\rm el}/\d t|_{t=0}$ and $N_{\rm el}$, which are of course highly correlated:
+\begin{equation}
+\label{eq:lumi jun tot}
+{\cal L}_{\rm int}^{\rm June} =  {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, \left. \d N_{\rm el}^{\rm June}\over\d t\right|_0\, {1\over \sigma_{\rm tot}^2}\ ,
+\end{equation}
+\begin{equation}
+\label{eq:lumi jun el}
+{\cal L}_{\rm int}^{\rm June} = {N_{\rm el}^{\rm June}\over \sigma_{\rm el}}\ .
+\end{equation}
+Taking the luminosity-independent values for the total and elastic cross-sections (see Tab.~\ref{tab:cs}) yields the integrated luminosities for the June run which are again in excellent agreement with the CMS results, see Tab.~\ref{tab:lumi}.
+
+\TabLumi
+
+%--------------------------------------------------
+\section{$\rho$-independent quantities}
+
+$\rho$ enters into the equations when the optical theorem is used. However, a $\rho$-independent determination of the total cross-section can be obviously obtained by summing directly the elastic \cite{P1} and inelastic  \cite{P2} cross-sections:
+\begin{equation}
+\label{eq:m rho indep}
+\sigma_{\rm tot} = \sigma_{\rm el} + \sigma_{\rm inel}\ .
+\end{equation}
+These $\rho$-independent cross-sections (see Tab.~\ref{tab:cs}) have a larger uncertainty due to the direct propagation of the luminosity uncertainty which, however, cancels for the cross-section ratios
+$$
+{\sigma_{\rm el} \over \sigma_{\rm inel}} = 0.345 \pm 0.009\ ,\qquad {\sigma_{\rm el}\over \sigma_{\rm tot}} = 0.257 \pm 0.005\ .
+$$
+
+
+%--------------------------------------------------
+\section{Rho determination}
+
+The elastic and inelastic measurements can be combined in order to determine $\rho^2$:
+\begin{equation}
+\label{eq:rho}
+\rho^2 = 16\pi\ (\hbar c)^2\ {\cal L_{\rm int}}\ {\d N_{\rm el}/\d t|_0\over (N_{\rm el} + N_{\rm inel})^2} - 1\ .
+\end{equation}
+This is a direct measurement at $\sqrt s = 7\un{TeV}$ unlike the COMPETE value extrapolated from lower-energy measurements. Inserting the values from \cite{P1,P2} yields $\rho^2 = 0.009 \pm 0.056$ (mean and standard deviation). This estimate can not be translated into terms of $\rho$ in a straight-forward manner since an important part of the $\rho^2$ distribution extends to negative values, where square root is not defined. Instead, one can state that at $95\%$ confidence level $\rho^2 < 0.10$. This upper bound can be equally expressed as $\rho < 0.32$. Alternatively, one can pursue the Bayes' approach to estimate $|\rho|$. Taking a uniform prior $|\rho|$ distribution yields a posterior distribution with mean $0.145$ and standard deviation $0.091$.
+
+%--------------------------------------------------
+\section{Comparison with other experiments}
+
+The total, elastic and inelastic cross-sections obtained from different methods and data sets (summarized in Tab.~\ref{tab:cs}) show excellent agreement. In particular, the inelastic cross-section arising from two completely independent measurements with the Roman Pot detectors in the very forward region close to the beams and with the more central charged-particle telescopes agree remarkably well with each other and also with the ALICE \cite{alice_inel}, ATLAS \cite{atlas_inel} and CMS \cite{cms_inel} results (see Fig.~\ref{fig:cs} right).
+
+The energy dependence of the proton-(anti)proton cross-sections is shown in Fig.~\ref{fig:cs} left. The best fit of $\sigma_{\rm tot}(s)$ by the COMPETE Collaboration \cite{compete} (published before the TOTEM result) describes the energy dependence well even up to the highest energies.  
+
+The ratio $\sigma_{\rm el}/\sigma_{\rm tot}$ can give some insights into the shape and the opacity of the proton, subject to model-dependent theoretical interpretations. The steady rise of this ratio with energy (Fig.~\ref{fig:sigma rat}) leads to the conclusion that the proton size and its opacity increase with energy. 
+
+\begin{figure*}
+\begin{center}
+\includegraphics{fig/sigma_tot_el_inel_cmp_big.pdf}
+%\vskip-5mm
+\caption{Left: the dependences of total (red), inelastic (blue) and elastic (green) cross-sections on the scattering energy $\sqrt s$. The continuous black lines (lower for $\rm pp$, upper for $\rm \bar pp$) represent the best fits of the total cross-section data by the COMPETE collaboration \cite{compete}. The dashed line results from a fit of the elastic scattering data. The dash-dotted curves correspond to the inelastic cross-section and were obtained as the difference between the continuous and dashed fits.\hfil\break
+Right: measurements of total (red), inelastic (blue) and elastic (green) cross-sections at $\sqrt s = 7\un{TeV}$. The circles represent the four TOTEM measurements summarized in Tab.~\ref{tab:cs} (weighted mean given by the dotted line), the other points show the measurements of other LHC collaborations.}
+\label{fig:cs}
+\end{center}
+\end{figure*}
 
 
 \begin{figure}
-\onefigure{fig_el/sigma_el_to_sigma_tot.pdf}
+\onefigure{fig/sigma_el_to_sigma_tot.pdf}
 \vskip-5mm
-\caption{(Color online) The ratio of the elastic to total cross-section as a function of the scattering energy $\sqrt s$. TODO: fit ??, REMOVE?}
+\caption{(Colour on-line) The ratio of the elastic to total cross-section as a function of the scattering energy $\sqrt s$. The dashed line shows the ratio of the $\sigma_{\rm el}(s)$ and $\sigma_{\rm tot}(s)$ fits from Fig.~\ref{fig:cs}.
+}
 \label{fig:sigma rat}
 \end{figure}
 
-TODO: $\sigma_{\rm el} / \sigma_{\rm inel}$ -- indicates the ``shape'' of the proton; need interpretation for the ratio growing with $\sqrt s$
-
-
-
 %--------------------------------------------------
-\section{Relevance for Cosmic Ray measurements}
+\section{Relevance for cosmic-ray measurements}
 
-~
-
-TODO: understanding of showers in the atmosphere
-
-TODO: direct pp cross-section instead of nuclei+Glauber
-
-TODO
-	
-
+The LHC energy is starting to overlap with the energy range where large area cosmic ray showers are studied (see Fig.~\ref{fig:cs}). Investigations of high-energy proton-proton interactions at the LHC are therefore of high importance for the development of cosmic ray showers in the atmosphere and thus for high-energy cosmic ray interpretations, like e.g.~the energy spectrum and particle composition \cite{enterria}.  The most important observable is the shower maximum $X_{\rm max}$ which is related to the primary particle mass. It strongly depends on the inelastic $\rm p$-air cross-section. It is worth mentioning that calculations of hadron-nucleus cross-sections in the Glauber-Gribov formalism \cite{nagano,glauber} require the knowledge of the proton-proton elastic scattering amplitude in the small $|t|$-range rather than just the inelastic $\rm pp$ cross-section. The latest Auger measurement of the inelastic cross-section at $\sqrt s = 58\un{TeV}$ (Fig.~\ref{fig:cs}) benefits considerably from the TOTEM cross-section results. In addition, all kinds of diffractive phenomena influence the development of the shower cascade and the multiplicity fluctuations of secondary hadrons. Thus the measurements of the $\rm pp$ cross-sections and the particle flow are of high importance for the interpretation of cosmic ray showers.
 
 %--------------------------------------------------
 \acknowledgments
-Acknowledgements -- Insert here the text.
+
+We are indebted to the beam optics development team
+%({\sc A.~Verdier} in the initial phase, {\sc H.~Burkhardt}, {\sc G.~M\" uller}, {\sc S.~Redaelli}, {\sc J.~Wenninger}, {\sc S.~M.~White})
+for the design, the thorough preparations and the successful commissioning of the $\beta^* = 90\un{m}$ optics. We congratulate the CERN accelerator groups for the very smooth operation in 2011. We thank
+%{\sc M.~Ferro-Luzzi}
+the LHC machine coordinators for scheduling the dedicated fills.
+
+We are grateful to CMS for providing their luminosity measurements.
 
 
 %--------------------------------------------------
-\begin{thebibliography}{0}
-
-% TODO: sort them
+\begin{thebibliography}{00}
 
 \bibitem{epl96}
     %First measurements of the total proton-proton cross section at the LHC energy of $\sqrt s =7\,\rm TeV$ CERN-PH-EP-2011-158
@@ -321,7 +338,8 @@ Acknowledgements -- Insert here the text.
 
 \bibitem{P1} 
 	\Name{Antchev G.~{\it et al.}~(TOTEM Collaboration)}
-	\REVIEW{Europhys.~Lett.}{TODO}{2012}{TODO}
+	CERN-PH-EP-2012-239
+	%\REVIEW{Europhys.~Lett.}{TODO}{2012}{TODO}
 
 \bibitem{P2} 
 	\Name{Antchev G.~{\it et al.}~(TOTEM Collaboration)}
@@ -341,26 +359,24 @@ Acknowledgements -- Insert here the text.
 	\Name{Cudell~J.~R.~{\it et al.} (COMPETE Collaboration)}
 	\REVIEW{Phys.\ Rev.\ Lett.}{89}{2002}{201801}
 
-\bibitem{pdg} 
-	\Name{Nakamura K.~\etal{} (Particle Data Group)}
-	\REVIEW{J.~Phys.}{G37}{2010}{075021}
-
-\bibitem{alice inel}
+\bibitem{alice_inel}
 %Measurement of inelastic, single- and double-diffraction cross sections in proton-proton collisions at the LHC with ALICE
 	\Name{ALICE Collaboration}
 	CERN-PH-EP-2012-238
 
-\bibitem{atlas inel}
+\bibitem{atlas_inel}
 %arXiv:1104.0326; CERN-PH-EP-2011-047
 %Measurement of the Inelastic Proton-Proton Cross-Section at s√=7 TeV with the ATLAS Detector
 	\Name{ATLAS Collaboration}
 	\REVIEW{Nature Commun.}{2}{2011}{463}
 
-\bibitem{cms inel}
-	\Name{Zsigmond, A.~J.~(CMS collaboration)}
-	{\it Inelastic proton-proton cross section measurements in CMS at $\sqrt s = 7\un{TeV}$}, 
-	presented at {\it XX International Workshop on Deep-Inelastic Scattering and Related Subjects}, Bonn, Germany, 26-30 March 2012.
-	arXiv:1205.3142
+\bibitem{cms_inel}
+	%\Name{Zsigmond, A.~J.~(CMS collaboration)}
+	%{\it Inelastic proton-proton cross section measurements in CMS at $\sqrt s = 7\un{TeV}$}, 
+	%presented at {\it XX International Workshop on Deep-Inelastic Scattering and Related Subjects}, Bonn, Germany, 26-30 March 2012.
+	%arXiv:1205.3142
+	\Name{CMS collaboration}
+	CERN-PH-EP-2012-293
 
 \bibitem{auger}
 %title = {Measurement of the Proton-Air Cross Section at $\sqrt{s}\mathbf{=}57\text{\,}\text{\,}\mathrm{TeV}$ with the Pierre Auger Observatory},
@@ -368,6 +384,21 @@ Acknowledgements -- Insert here the text.
 	\Name{Pierre Auger Collaboration}
 	\REVIEW{Phys.\ Rev.\ Lett.}{109}{2012}{062002}
 
+\bibitem{pdg} 
+	\Name{Nakamura K.~\etal{} (Particle Data Group)}
+	\REVIEW{J.~Phys.}{G37}{2010}{075021}
+
+\bibitem{enterria}
+	\Name{d'Enterria D.~\etal}
+	\REVIEW{Astropart.~Phys.}{35}{2011}{98}
+
+\bibitem{nagano}
+	\Name{Nagano M.~and Watson A.~A.}
+	\REVIEW{Rev.~Mod.~Phys.}{72}{2000}{689}
+
+\bibitem{glauber}
+	\Name{Glauber R.~J.}
+	Lectures in Theoretical Physics, ed. by W.~E.~Britten (Interscience, NY,1959) v.1, p. 315
 
 
 %F. Halzen, K. Igi, M. Ishida and C.S.Kim
